// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProtectionRecoveryRequest activated protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#37ad4b"
      icon="activated"
      text="Your Logion Trust Protection is active"
    />
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          status="ACTIVATED"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          status="ACTIVATED"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest activated recovery request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#37ad4b"
      icon="activated"
      text="You are now ready to claim the access to address toRecover."
    />
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Button
      data-testid="btnClaim"
      onClick={[Function]}
    >
      Claim
    </Button>
    <ExtrinsicSubmitter
      id="initiateRecovery"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Recovery successfully initiated."
    />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          status="ACTIVATED"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          status="ACTIVATED"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest pending protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#37ad4b"
      icon="activated"
      text="Your Logion Trust Protection is active"
    />
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          status="ACTIVATED"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          status="ACTIVATED"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest pending recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#37ad4b"
      icon="activated"
      text="You are now ready to claim the access to address toRecover."
    />
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Button
      data-testid="btnClaim"
      onClick={[Function]}
    >
      Claim
    </Button>
    <ExtrinsicSubmitter
      id="initiateRecovery"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Recovery successfully initiated."
    />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          status="ACTIVATED"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          status="ACTIVATED"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest protection request 1`] = `
<FullWidthPane
  mainTitle="My Logion Protection"
  titleIcon={
    Object {
      "background": undefined,
      "icon": Object {
        "hasVariants": true,
        "id": "shield",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#ff9b3f"
      icon="pending"
      text="Your Logion Trust Protection request has been submitted. Your Legal Officers
                        will contact you as soon as possible to finalize the KYC process. Please note that, after the successful
                        completion of one of your Legal Officer approval processes, you will be able to use all features
                        provided by your logion account dashboard."
    />
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          status="PENDING"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          status="PENDING"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;

exports[`ProtectionRecoveryRequest recovery request 1`] = `
<FullWidthPane
  mainTitle="Recovery"
  subTitle="Recovery process status"
  titleIcon={
    Object {
      "background": Object {
        "from": "#7a90cb",
        "to": "#3b6cf4",
      },
      "icon": Object {
        "hasVariants": false,
        "id": "recovery",
      },
    }
  }
>
  <Frame
    className="ProtectionRecoveryRequest"
  >
    <Header
      color="#ff9b3f"
      icon="pending"
      text="Your Logion Recovery request  for account toRecover has been submitted. Your Legal Officers will contact you
                        as soon as possible to finalize the KYC process."
    />
    <ExtrinsicSubmitter
      id="activatedProtection"
      onError={[Function]}
      onSuccess={[Function]}
      signAndSubmit={null}
      successMessage="Protection successfully activated."
    />
    <Row
      className="legal-officers"
    >
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          legalOfficerNumber={1}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          status="PENDING"
        />
      </Col>
      <Col
        md={6}
      >
        <SelectLegalOfficer
          legalOfficer={
            Object {
              "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
              "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
              "email": "g.grain@adrastee-lyon.fr",
              "name": "Guillaume Grain",
            }
          }
          legalOfficerNumber={2}
          legalOfficers={
            Array [
              Object {
                "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
                "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
                "email": "patrick@logion.network",
                "name": "Patrick Gielen",
              },
              Object {
                "address": "5FHneW46xGXgs5mUiveU4sbTyGBzmstUspZC92UhjJM694ty",
                "details": "SELARL ADRASTEE
Gare des Brotteaux
14, place Jules Ferry
69006 LYON
France
Tel: +33 4 78 52 87 56",
                "email": "g.grain@adrastee-lyon.fr",
                "name": "Guillaume Grain",
              },
              Object {
                "address": "5FLSigC9HGRKVhB9FiEo4Y3koPsNmBmLJbpXg2mp1hXcS59Y",
                "details": "AUXILIA CONSEILS 18
Huissiers de Justice associés
7 rue Jean Francois Champollion Parc Comitec
18000 Bourges
France
Tel: +33 2 48 67 50 50",
                "email": "alain.barland@auxilia-conseils.com",
                "name": "Alain Barland",
              },
            ]
          }
          mode="view"
          otherLegalOfficer={
            Object {
              "address": "5GrwvaEF5zXb26Fz9rcQpDWS57CtERHpNehXCPcNoHGKutQY",
              "details": "MODERO
Huissier de Justice Etterbeek
Rue Beckers 17
1040 Etterbeek
Belgique
Tel: +32 498 237 107",
              "email": "patrick@logion.network",
              "name": "Patrick Gielen",
            }
          }
          status="PENDING"
        />
      </Col>
    </Row>
    <Row
      className="footer"
    >
      <Col
        className="legal-officers-images"
        md={4}
      >
        <img
          alt="male legal officer"
          className="legal-officer-male-image"
          src="/assets/landing/protection_male.svg"
        />
        <img
          alt="female legal officer"
          className="legal-officer-female-image"
          src="/assets/landing/protection_female.svg"
        />
      </Col>
      <Col
        className="legal-officers-text"
        md={8}
      >
        <p
          className="foundation"
        >
          <strong>
            The foundation of
          </strong>
           your protection
        </p>
        <p>
          In charge of a 
          <strong>
            public office
          </strong>
          , Logion Legal Officers are 
          <strong>
            identified Judicial Officers
          </strong>
          ,
          <br />
          who apply a strict code of ethics and are 
          <strong>
            legaly responsible
          </strong>
           for their actions
          <br />
          while legally securing your digital assets and digital transactions.
        </p>
      </Col>
    </Row>
  </Frame>
</FullWidthPane>
`;
